--- a/_includes/disqus_comments.html
+++ b/_includes/disqus_comments.html
@@ -1,5 +1,5 @@
 {% if site.disqus_shortname %}
-    <script type="text/javascript">
+    <!-- <script type="text/javascript">
         var disqus_shortname = '{{ site.disqus_shortname }}';
         (function() {
             var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
@@ -13,5 +13,9 @@
             (document.getElementsByTagName('HEAD')[0] || document.getElementsByTagName('BODY')[0]).appendChild(s);
         }());
     </script>
-    <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+    <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript> -->
+    <!-- UY BEGIN -->
+<div id="uyan_frame"></div>
+<script type="text/javascript" src="http://v2.uyan.cc/code/uyan.js?uid=2138229"></script>
+<!-- UY END -->
 {% endif %}
