--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -40,6 +40,10 @@ layout: compress
         </div>
         {% if page.comments and site.disqus_shortname %}<section id="disqus_thread" class="animated fadeInUp"></section><!-- /#disqus_thread -->{% endif %}
     </header>
+
+    <div id="uyan_frame"></div>
+    <script type="text/javascript" src="http://v2.uyan.cc/code/uyan.js?uid=2138229"></script>
+
     {% include scripts.html %}
     {% if site.mathjax == true %}
     <!-- MathJax -->
