--- a/_includes/disqus_comments.html
+++ b/_includes/disqus_comments.html
@@ -15,6 +15,7 @@
     </script>
     <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript> -->
     <!-- UY BEGIN -->
-<script type="text/javascript" src="http://v2.uyan.cc/code/uyan.js?uid=2138229"></script>
+<!-- <div id="uyan_frame"></div>
+<script type="text/javascript" src="http://v2.uyan.cc/code/uyan.js?uid=2138229"></script> -->
 <!-- UY END -->
 {% endif %}
